@@ -2,40 +2,44 @@ package com.company;
 
 import com.company.utils.Event;
 import com.company.utils.Status;
-import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.time.LocalDateTime;
+import java.time.ZoneId;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Date;
 import java.util.List;
+import java.util.Set;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-public class LogParser {
+public class LogParser implements IPQuery {
 
   private static final String LOG_PATH = "03_LogParser/src/main/resources/log.log";
+  private static final String RESULTS_FILE_PATH = "03_LogParser/src/main/resources/results.txt";
   private static final Pattern LOG_PARSER_PATTERN = Pattern.
       compile("([\\d.]+)\\t([\\w\\s]+)\\t([\\d.:\\s]+)\\t([\\w]+)\\s?([\\d]+)?\\t([\\w]+)");
   private static final DateTimeFormatter dateTimeFormatter = DateTimeFormatter.ofPattern("dd.MM.yyyy HH:mm:ss");
+  private static List<LogRecord> result = new ArrayList<>();
 
-  public static void main(String[] args) {
-    List<LogRecord> logList = readLogFromFile();
-    writeSuccessfulResultsToFile(logList);
+  public void writeSuccessfulResultsToFile() {
+    Stream<CharSequence> resultsStream = result.stream().filter(r -> (r.getEvent().equals(Event.DONE_TASK)
+        || r.getEvent().equals(Event.SOLVE_TASK)) && r.getStatus().equals(Status.OK))
+        .map(LogRecord::getUsername).distinct().map(s -> s);
+    try {
+      Files.write(Paths.get(RESULTS_FILE_PATH), resultsStream::iterator);
+    } catch (IOException e) {
+      e.printStackTrace();
+    }
+
   }
 
-  private static void writeSuccessfulResultsToFile(List<LogRecord> logList) {
-    logList.stream().filter(r -> (r.getEvent().equals(Event.DONE_TASK)
-        || r.getEvent().equals(Event.SOLVE_TASK)) && r.getStatus().equals(Status.OK)).forEach(System.out::println);
-  }
-
-  private static List<LogRecord> readLogFromFile() {
-    List<LogRecord> result = new ArrayList<>();
-    File file = new File(LOG_PATH);
-    try (Stream<String> stream = Files.lines(Path.of(file.toURI()))){
+  public void readLogFromFile() {
+    try (Stream<String> stream = Files.lines(Paths.get(LOG_PATH))){
       result = stream.flatMap(s -> LOG_PARSER_PATTERN.matcher(s).results().map(matchResult -> {
         LogRecord logRecord = new LogRecord();
         logRecord.setIp(matchResult.group(1));
@@ -52,7 +56,6 @@ public class LogParser {
     } catch (IOException ex) {
       ex.printStackTrace();
     }
-    return result;
   }
 
   private static LocalDateTime parseDateTime(String input) {
@@ -64,5 +67,63 @@ public class LogParser {
     time = Arrays.stream(time.split(":")).map(s -> (s.length() == 1) ? "0".concat(s) : s)
         .reduce((s1, s2) -> s1 + ":" + s2).orElse(time);
     return LocalDateTime.parse(date + " " + time, dateTimeFormatter);
+  }
+
+  @Override
+  public int getNumberOfUniqueIPs(Date after, Date before) {
+    LocalDateTime afterLDT = after.toInstant().atZone(ZoneId.systemDefault())
+        .toLocalDateTime();
+    LocalDateTime beforeLDT = before.toInstant().atZone(ZoneId.systemDefault())
+        .toLocalDateTime();
+
+    return (int)result.stream().filter(r -> r.getDate().isBefore(beforeLDT) && r.getDate().isAfter(afterLDT))
+        .map(LogRecord::getIp).distinct().count();
+  }
+
+  @Override
+  public Set<String> getUniqueIPs(Date after, Date before) {
+    LocalDateTime afterLDT = after.toInstant().atZone(ZoneId.systemDefault())
+        .toLocalDateTime();
+    LocalDateTime beforeLDT = before.toInstant().atZone(ZoneId.systemDefault())
+        .toLocalDateTime();
+
+    return result.stream().filter(r -> r.getDate().isBefore(beforeLDT) && r.getDate().isAfter(afterLDT))
+        .map(LogRecord::getIp).collect(Collectors.toSet());
+  }
+
+  @Override
+  public Set<String> getIPsForUser(String user, Date after, Date before) {
+    LocalDateTime afterLDT = after.toInstant().atZone(ZoneId.systemDefault())
+        .toLocalDateTime();
+    LocalDateTime beforeLDT = before.toInstant().atZone(ZoneId.systemDefault())
+        .toLocalDateTime();
+
+    return result.stream().filter(r -> r.getDate().isBefore(beforeLDT) && r.getDate().isAfter(afterLDT)
+        && r.getUsername().equals(user))
+        .map(LogRecord::getIp).collect(Collectors.toSet());
+  }
+
+  @Override
+  public Set<String> getIPsForEvent(Event event, Date after, Date before) {
+    LocalDateTime afterLDT = after.toInstant().atZone(ZoneId.systemDefault())
+        .toLocalDateTime();
+    LocalDateTime beforeLDT = before.toInstant().atZone(ZoneId.systemDefault())
+        .toLocalDateTime();
+
+    return result.stream().filter(r -> r.getDate().isBefore(beforeLDT) && r.getDate().isAfter(afterLDT)
+        && r.getEvent().equals(event))
+        .map(LogRecord::getIp).collect(Collectors.toSet());
+  }
+
+  @Override
+  public Set<String> getIPsForStatus(Status status, Date after, Date before) {
+    LocalDateTime afterLDT = after.toInstant().atZone(ZoneId.systemDefault())
+        .toLocalDateTime();
+    LocalDateTime beforeLDT = before.toInstant().atZone(ZoneId.systemDefault())
+        .toLocalDateTime();
+
+    return result.stream().filter(r -> r.getDate().isBefore(beforeLDT) && r.getDate().isAfter(afterLDT)
+        && r.getStatus().equals(status))
+        .map(LogRecord::getIp).collect(Collectors.toSet());
   }
 }
